# CLionGoogleTest

./: .gitignore  CMakeLists.txt  main.cpp
